--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,8 +118,8 @@ li{
 }
 .media-social i{
     padding-left: 15px;
-    font-size: 20px;
-    color: var(--amber-color);
+    font-size: 24px;
+    color: var(--black-color);
     cursor: pointer;
     transition: var(--transition-02);
 }
@@ -143,7 +143,7 @@ li{
 }
 .hero p{
     padding-top: 20px;
-    font-size: 1.2rem;
+    font-size: 1rem;
     letter-spacing: 2px;
     text-align: justify;
     font-family: var(--font-lora);
@@ -151,7 +151,30 @@ li{
 
 /*_________ featured  _________*/
 .featured{
-    background-color: var(--bright-color);
+    background-color: var(--bg-color);  
+}
+.featured h1{
+    color: var(--bright-color);
+    font-size: 4rem;
+    font-weight: 700;
+    text-align: center;
+    margin-top: 30px;
+}
+.area{
+    background-color: var(--bg-body);
+    padding: 1px;
+}
+.area h3{
+    text-align: center;
+    margin-bottom: 40px;
+}
+.list-group-item{
+    font-size: 18px;
+    transition: var(--transition-02);
+}
+.list-group-item  i{
+    font-size: 1.3rem;
+    color: var(--orange-color);
 }
 
 /*_________   _________*/
@@ -180,6 +203,37 @@ li{
         font-size: 35px;
         text-transform: none;
         text-align: center;
+    }
+    .hero .btn{
+        margin-bottom: 30px;
+    }
+    .featured h1{
+        font-size: 25px;
+        padding-bottom: 30px;
+    }
+    .area h3{
+        font-size: 20px;
+        padding-top: 40px;
+    }
+    .list-group-item{
+        font-size: 16px;
+        transition: var(--transition-02);
+    }
+    .list-group-item-action:hover{
+        font-size: 16px;
+        color: var(--white-color);
+        transition: var(--transition-02);
+        background-color: var(--bright-color);
+    }
+    .list-group-item  i{
+        font-size: 1rem;
+        color: var(--orange-color);
+    }
+    .list-group-item  i:hover{
+        font-size: 1rem;
+        color: var(--white-color);
+    
+       
     }
  }
 
